--- a/taskmanager/taskmanager/core/templates/home.html
+++ b/taskmanager/taskmanager/core/templates/home.html
@@ -27,18 +27,16 @@
 								<th> Tarefa </th>
 								<th> Status </th>
 								<th> Data de Criação </th>
-								<th> Editar </th>
 								<th> Excluir </th>
 							</tr>
 						</thead>
 						<tbody>
                             {% for task in tasks %}
 						        <tr>
-						            <td> {{task.get_id} </td>
-						            <td> {{task.get_description} </td>
-						            <td> {{task.get_status}} </td>
-						            <td> {{task.get_date}} </td>
-						        	<td></td>
+						            <td> {{task.pk}} </td>
+						            <td> {{task.description}} </td>
+						            <td> {{task.status}} </td>
+						            <td> {{task.date_created}} </td>
 						        	<td><a class="btn btn-danger" href="/removetask?id={{task.get_id}}"> Deletar </a></td>
                                 </tr>  
                                 {% endfor %}
